--- a/index.html
+++ b/index.html
@@ -15,43 +15,46 @@
     <div class="container">
         <!-- Buttons -->
         <div class="buttons">
+            <div class="logout">
+                <button class="btn btn-danger">Logout</button>
+            </div>
             <ul>
-                <li>ADD NEW APPLICANT</li>
-                <li>UPDATE APPLICANT</li>
-                <li>DELETE APPLICANT</li>
+                <li  class="btn">ADD NEW APPLICANT</li>
+                <li class="btn">UPDATE APPLICANT</li>
+                <li class="btn">DELETE APPLICANT</li>
             </ul>
         </div>
 
         <!-- Client request -->
-            <div class="client-request">
-                <section>
-                    <div class="date">
+        <div class="client-request">
+            <section>
+                <div class="date">
 
-                    </div>
-                    <div class="request-details">
-                        <ul>
-                            <li>Client Name:</li>
-                            <li>Phone number:</li>
-                            <li>Email Address:</li>
-                            <li>Message:</li>
-                            <li>Applicant selected:</li>
-                            <li>Applicant ID:</li>
-                        </ul>
-                        <ul>
-                            <li>David Scott</li>
-                            <li>+27790994875</li>
-                            <li>scott@email.com</li>
-                            <li>Please send me contact information of Brian. I might have a job for him</li>
-                            <li>Brian Moses</li>
-                            <li>13</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <button>Mark as processed</button>
-                        <button>Delete</button>
-                    </div>
-                </section>
-            </div>
+                </div>
+                <div class="request-details">
+                    <ul>
+                        <li>Client Name:</li>
+                        <li>Phone number:</li>
+                        <li>Email Address:</li>
+                        <li>Message:</li>
+                        <li>Applicant selected:</li>
+                        <li>Applicant ID:</li>
+                    </ul>
+                    <ul>
+                        <li>David Scott</li>
+                        <li>+27790994875</li>
+                        <li>scott@email.com</li>
+                        <li>Please send me contact information of Brian. I might have a job for him</li>
+                        <li>Brian Moses</li>
+                        <li>13</li>
+                    </ul>
+                </div>
+                <div>
+                    <button>Mark as processed</button>
+                    <button>Delete</button>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 </html>
