Creating styles for client section

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
         <!-- Client request -->
         <div class="client-request">
+            <h4>CLIENT REQUEST</h4>
             <section>
                 <div class="date">
-
+                    02 January, 2021
                 </div>
                 <div class="request-details">
                     <ul>
                         <li>Client Name:</li>
                         <li>Phone number:</li>
                         <li>Email Address:</li>
-                        <li>Message:</li>
                         <li>Applicant selected:</li>
                         <li>Applicant ID:</li>
                     </ul>
@@ -44,7 +44,34 @@
                         <li>David Scott</li>
                         <li>+27790994875</li>
                         <li>scott@email.com</li>
-                        <li>Please send me contact information of Brian. I might have a job for him</li>
+                        <li>Brian Moses</li>
+                        <li>13</li>
+                    </ul>
+                </div>
+                <div class="client-message">
+                    "Please send me contact information of Jane Matemba. I might have a job for him"
+                </div>
+                <div>
+                    <button>Mark as processed</button>
+                    <button>Delete</button>
+                </div>
+            </section>
+            <section>
+                <div class="date">
+                    02 January, 2021
+                </div>
+                <div class="request-details">
+                    <ul>
+                        <li>Client Name:</li>
+                        <li>Phone number:</li>
+                        <li>Email Address:</li>
+                        <li>Applicant selected:</li>
+                        <li>Applicant ID:</li>
+                    </ul>
+                    <ul>
+                        <li>David Scott</li>
+                        <li>+27790994875</li>
+                        <li>scott@email.com</li>
                         <li>Brian Moses</li>
                         <li>13</li>
                     </ul>
