Created an anchor on logout bottom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Buttons -->
         <div class="buttons">
             <div class="logout">
-                <button class="btn btn-danger">Logout</button>
+                <button class="btn btn-danger"><a href="#"> Logout</a></button>
             </div>
             <ul>
                 <li  class="btn"><a href="#">ADD NEW APPLICANT</a> </li>
