--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="buttons">
             <div class="logout">
                 <button class="btn btn-danger"><a href="#"> Logout</a></button>
-                <button class="btn btn-info">Sign up new user Admin</button>
+                <button class="btn btn-info" ><a href="#">Sign up new user Admin</a> </button>
             </div>
             <ul>
                 <li  class="btn"><a href="#">ADD NEW APPLICANT</a> </li>
